--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@types/react-slick": "^0.23.13",
     "lucide-react": "^0.552.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "latest",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
