--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "dependencies": {
     "@types/react-slick": "^0.23.13",
+    "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.552.0",
-    "next": "latest",
+    "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-slick": "^0.31.0",
@@ -29,7 +30,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
